; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dce110/extr_dce110_timing_generator_v.c_dce110_timing_generator_v_unblank_crtc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dce110/extr_dce110_timing_generator_v.c_dce110_timing_generator_v_unblank_crtc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timing_generator = type { i32 }

@mmCRTCV_BLANK_CONTROL = common dso_local global i32 0, align 4
@CRTCV_BLANK_CONTROL = common dso_local global i32 0, align 4
@CRTC_BLANK_DATA_EN = common dso_local global i32 0, align 4
@CRTC_BLANK_DE_MODE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.timing_generator*)* @dce110_timing_generator_v_unblank_crtc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dce110_timing_generator_v_unblank_crtc(%struct.timing_generator* %0) #0 {
  %2 = alloca %struct.timing_generator*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.timing_generator* %0, %struct.timing_generator** %2, align 8
  %5 = load i32, i32* @mmCRTCV_BLANK_CONTROL, align 4
  store i32 %5, i32* %3, align 4
  %6 = load %struct.timing_generator*, %struct.timing_generator** %2, align 8
  %7 = getelementptr inbounds %struct.timing_generator, %struct.timing_generator* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @dm_read_reg(i32 %8, i32 %9)
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @CRTCV_BLANK_CONTROL, align 4
  %13 = load i32, i32* @CRTC_BLANK_DATA_EN, align 4
  %14 = call i32 @set_reg_field_value(i32 %11, i32 0, i32 %12, i32 %13)
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* @CRTCV_BLANK_CONTROL, align 4
  %17 = load i32, i32* @CRTC_BLANK_DE_MODE, align 4
  %18 = call i32 @set_reg_field_value(i32 %15, i32 0, i32 %16, i32 %17)
  %19 = load %struct.timing_generator*, %struct.timing_generator** %2, align 8
  %20 = getelementptr inbounds %struct.timing_generator, %struct.timing_generator* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* %3, align 4
  %23 = load i32, i32* %4, align 4
  %24 = call i32 @dm_write_reg(i32 %21, i32 %22, i32 %23)
  ret void
}

declare dso_local i32 @dm_read_reg(i32, i32) #1

declare dso_local i32 @set_reg_field_value(i32, i32, i32, i32) #1

declare dso_local i32 @dm_write_reg(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
